--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "Notes"
   ],
   "author": "amybakameyer",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^4.13.6"
+  }
 }
